[tool.poetry]
name = "twenty-q-dist"
version = "0.1.0"
description = "Streamlit and ProbLog based tool to help users reason about their beliefs about distributions."
authors = ["John Urbanik <johnurbanik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
numpy = "^1.19.2"
pandas = "^1.1.2"
plotly = "^4.10.0"
problog = "^2.1.0"
PySDD = "^0.2.10"
python = "^3.7"
sklearn = "^0.0"
streamlit = "^0.66.0"
mystic = "^0.3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
